@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - api = 1 is no longer experimental, no longer warns and is
+    better documented (gh#23)
 
 0.11      2021-12-30 05:42:19 -0700
   - Production release identical to 0.10_01
